--- a/src/components/Comment/Comment.module.scss
+++ b/src/components/Comment/Comment.module.scss
@@ -10,7 +10,7 @@ hr {
     overflow-wrap: break-word;
   }
   div {
-    padding: 5px 0;
+    padding: 0 0 5px;
   }
   span {
     display: inline-block;
@@ -27,7 +27,7 @@ hr {
   .edit {
     padding: 0;
     span {
-      font-size: 0.5rem;
+      font-size: 0.6rem;
       color: lighten($font-color-primary, 40%);
       cursor: pointer;
     }
